tests/errors/kind_star_of_complex.f90
program kind_star_of_complex
    implicit none
    complex(*) a
end program
